--- a/multiplayer/frontend/index.html
+++ b/multiplayer/frontend/index.html
@@ -3,21 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <title>Multiplayer test</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+  <!--<script src="https://kylemit.github.io/firebug-console/firebug-lite-debug.js"></script>-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" id="stylesheet">
+  
 <style>
 #gameScreen {
   display: none;
 }
 </style>
 </head>
-<body>
+<body style="color: white; background-color: black">
   <section class="vh-100">
     <div class="container h-100">
 
       <div id="initialScreen" class="h-100">
         <div class="d-flex flex-column align-items-center justify-content-center h-100">
-            <h1>Test</h1>
+            <h1>Multiplayer</h1>
+            <div class="form-group">
+              <input type="text" placeholder="Enter Username" id="usernameInput"/>
+            </div>
+            <p></p>
             <button
               type="submit"
               class="btn btn-success"
@@ -32,7 +37,7 @@
             <button
               type="submit"
               class="btn btn-success"
-              id="joinGameButton"
+              id="startGameButton"
             >
               Join Game
             </button>
@@ -41,11 +46,22 @@
 
       <div id="gameScreen" class="h-100">
         <div class="d-flex flex-column align-items-center justify-content-center h-100">
-
-          <h1>Your game code is: <span id="gameCodeDisplay"></span></h1>
-
-          <canvas id="canvas"></canvas>
+          <div class="sidebar" id="sidebarcontainer">
+          <h1 class="sidebar">Your game code is: </h1>
+          <b><span id="gameCodeDisplay" class="sidebar"></span></b>
+          <p></p>
+          <button
+              type="submit"
+              class="btn btn-success"
+              id="newGameButton"
+            >
+              Start game
+            </button>
+          <p class="sidebar">Players:</p>
+          <div id="playersDiv"></div>
+          </div>
         </div>
+        <canvas id="canvas"></canvas>
       </div>
 
     </div>
