--- a/multiplayer/frontend/index.html
+++ b/multiplayer/frontend/index.html
@@ -37,7 +37,7 @@
             <button
               type="submit"
               class="btn btn-success"
-              id="startGameButton"
+              id="joinGameButton"
             >
               Join Game
             </button>
@@ -53,7 +53,7 @@
           <button
               type="submit"
               class="btn btn-success"
-              id="newGameButton"
+              id="startGameButton"
             >
               Start game
             </button>
