--- a/multiplayer/frontend/index.html
+++ b/multiplayer/frontend/index.html
@@ -49,6 +49,7 @@
           <div class="sidebar" id="sidebarcontainer">
           <h1 class="sidebar">Your game code is: </h1>
           <b><span id="gameCodeDisplay" class="sidebar"></span></b>
+          <button type="submit" class="btn btn-success" id="copyButton">Copy</button>
           <p></p>
           <button
               type="submit"
