--- a/index.html
+++ b/index.html
@@ -1,9 +1,50 @@
 <!DOCTYPE html>
-<body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Tower defense</title>
+  <!--<script src="https://kylemit.github.io/firebug-console/firebug-lite-debug.js"></script>-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" id="stylesheet">
+  
+<style>
+#gameScreen {
+  display: none;
+}
+</style>
+</head>
+<body style="color: white; background-color: black">
+  <section class="vh-100">
+    <div class="container h-100">
 
-<canvas></canvas>
+      <div id="initialScreen" class="h-100">
+        <div class="d-flex flex-column align-items-center justify-content-center h-100">
+            <h1>Tower defense</h1>
+            <p></p>
+            <form action="singleplayer/index.html">
+            <button
+              type="submit"
+              class="btn btn-success"
+              id="newGameButton"
+            >
+              Singleplayer
+            </button>
+            </form>
+            <div>OR</div>
+            <form action="multiplayer/frontend/index.html">
+            <button
+              type="submit"
+              class="btn btn-success"
+              id="joinGameButton"
+            >
+              Multiplayer
+            </button>
+        </form>
+        </div>
+      </div>
+    </div>
+  </section>
 
-<script src = "js/index.js"></script>
-<link href="css/style.css" rel="stylesheet">
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+  <script src="index.js"></script>
 </body>
+</html>
