--- a/multiplayer/frontend/index.html
+++ b/multiplayer/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Multiplayer test</title>
+  <title>Multiplayer</title>
   <!--<script src="https://kylemit.github.io/firebug-console/firebug-lite-debug.js"></script>-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" id="stylesheet">
   
